--- a/Grav/dockerfile-install
+++ b/Grav/dockerfile-install
@@ -3,7 +3,9 @@ FROM debian:latest
         ### Requirements ###
         RUN     apt-get update \
                 && apt-get install -y apache2 git \
-                && apt-get install -y php7.0 php7.0-mbstring php7.0-zip php7.0-curl php7.0-gd php7.0-json php7.0-xml libapache2-mod-php7.0 composer
+                && apt-get install -y php7.0 \
+                php7.0-mbstring php7.0-zip php7.0-curl php7.0-gd php7.0-json php7.0-xml \
+                libapache2-mod-php7.0 composer
         RUN     a2enmod rewrite
         RUN     sed -i '/DocumentRoot/a<Directory "/var/www/html">\nAllowOverride All\n</Directory>' /etc/apache2/sites-available/000-default.conf
         ### Security Apache2 ###
