--- a/Ansible/Playbook/change-user-password.yml
+++ b/Ansible/Playbook/change-user-password.yml
@@ -11,7 +11,7 @@
 
   tasks:
   - name: 1. Generate the passwd in SHA512 with salt
-    shell: python3 -c 'import crypt; print(crypt.crypt("Newpass2018!", crypt.mksalt(crypt.METHOD_SHA512)))'
+    shell: python3 -c 'import crypt; print(crypt.crypt("<passwd>", crypt.mksalt(crypt.METHOD_SHA512)))'
     register: hash_passwd
 
   - name: 2. Change the passwd of {{ user }}
