--- a/Ansible/Playbook/create-user-advanced.yml
+++ b/Ansible/Playbook/create-user-advanced.yml
@@ -19,7 +19,7 @@
     shell: useradd -g {{ user }} -s /bin/bash -d /home/{{ user }} -m {{ user }}
 
   - name: 3. Generate the passwd
-    shell: openssl passwd -1 -salt 3Zdze7Vx {{ user }}
+    shell: python3 -c 'import crypt; print(crypt.crypt("{{ user }}", crypt.mksalt(crypt.METHOD_SHA512)))'
     register: hash_passwd
 
   - name: 3.1 Passwd to {{ user }} is {{ user }}
