--- a/Ansible/Playbook/change-dns-server.yml
+++ b/Ansible/Playbook/change-dns-server.yml
@@ -2,7 +2,7 @@
 # change-dns-server.yml
 ---
 
-- hosts: <hosts>
+- hosts: <hosts>  #ADD the (group) host
   remote_user: ansible
   become: yes
 
@@ -10,4 +10,4 @@
   - name: 1. Copy file resolv.conf
     shell: cp /etc/resolv.conf /tmp/resolv.conf.copy
   - name: 2. Change IP server DNS
-    shell: sed -i "s|<old_IP_DNS_server|new_IP_DNS_server|g" /etc/resolv.conf
+    shell: sed -i "s|<old_IP_DNS_server|new_IP_DNS_server|g" /etc/resolv.conf #ADD the IPs
