--- a/Ansible/Playbook/change-user-password.yml
+++ b/Ansible/Playbook/change-user-password.yml
@@ -2,16 +2,16 @@
 # change-user-password.yml
 ---
 
-- hosts: <hosts>
+- hosts: <hosts> #ADD the (group) host
   remote_user: ansible
   become: yes
 
   vars:
-    user: <ID_user>
+    user: <ID_user> #ADD the user
 
   tasks:
   - name: 1. Generate the passwd in SHA512 with salt
-    shell: python3 -c 'import crypt; print(crypt.crypt("<passwd>", crypt.mksalt(crypt.METHOD_SHA512)))'
+    shell: python3 -c 'import crypt; print(crypt.crypt("<passwd>", crypt.mksalt(crypt.METHOD_SHA512)))' #ADD the password
     register: hash_passwd
 
   - name: 2. Change the passwd of {{ user }}
