--- a/Ansible/Playbook/change-user-password.yml
+++ b/Ansible/Playbook/change-user-password.yml
@@ -1,4 +1,5 @@
 # Change the password of a user
+# It's possible to comment the vars and use it in command line : --extra-vars "user=<user> password=<passwd>"
 # change-user-password.yml
 ---
 
@@ -8,10 +9,11 @@
 
   vars:
     user: <ID_user> #ADD the user
+    password: <passwd>  #ADD the password
 
   tasks:
   - name: 1. Generate the passwd in SHA512 with salt
-    shell: python3 -c 'import crypt; print(crypt.crypt("<passwd>", crypt.mksalt(crypt.METHOD_SHA512)))' #ADD the password
+    shell: python3 -c 'import crypt; print(crypt.crypt("{{ password }}", crypt.mksalt(crypt.METHOD_SHA512)))'
     register: hash_passwd
 
   - name: 2. Change the passwd of {{ user }}
