--- a/Ansible/Playbook/change-user-password.yml
+++ b/Ansible/Playbook/change-user-password.yml
@@ -12,8 +12,13 @@
     password: <passwd>  #ADD the password
 
   tasks:
+  #FOR Debian 8 and 9
   - name: 1. Generate the passwd in SHA512 with salt
     shell: python3 -c 'import crypt; print(crypt.crypt("{{ password }}", crypt.mksalt(crypt.METHOD_SHA512)))'
+    register: hash_passwd
+  #FOR Debian 7 and older
+  - name: 1. Generate the passwd with salt
+    shell: python -c "import crypt, getpass, pwd; print(crypt.crypt('{{ password }}', '\$6\$<8-random-characters>\$'))"
     register: hash_passwd
 
   - name: 2. Change the passwd of {{ user }}
