--- a/Ansible/Playbook/change-user-password.yml
+++ b/Ansible/Playbook/change-user-password.yml
@@ -1,4 +1,5 @@
 # Change the password of a user
+# Be careful, the method is different between older and newer version of Debian because of version of python
 # It's possible to comment the vars and use it in command line : --extra-vars "user=<user> password=<passwd>"
 # change-user-password.yml
 ---
