--- a/Ansible/Playbook/create-user-simple.yml
+++ b/Ansible/Playbook/create-user-simple.yml
@@ -17,8 +17,14 @@
     shell: useradd -g {{ user }} -s /bin/bash -d /home/{{ user }} -m {{ user }}
 
   - name: 3. Generate the passwd
+#FOR Debian 8 and 9
     shell: python3 -c 'import crypt; print(crypt.crypt("{{ user }}", crypt.mksalt(crypt.METHOD_SHA512)))'
     register: hash_passwd
+#FOR Debian 7 and older
+  - name: 1. Generate the passwd with salt
+    shell: python -c "import crypt, getpass, pwd; print(crypt.crypt('{{ password }}', '\$6\$<8-random-characters>\$'))"
+    register: hash_passwd
+
 
   - name: 3.1 Passwd to {{ user }} is {{ user }}
     user:
